# bazel-test

./: BUILD.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-test-bazel  bazel-testlogs  go.mod
pkg/pkg1/: BUILD.bazel  main.go  main_test.go
pkg/util/: BUILD.bazel  main.go
