load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pkg1",
    srcs = ["main.go"],
    importpath = "github.com/fgimenez/bazel-test/pkg/pkg1",
    visibility = ["//visibility:public"],
    deps = ["//pkg/util"],
)

go_test(
    name = "pkg1_test",
    srcs = ["main_test.go"],
    embed = [":pkg1"],
)
